--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "monaco-editor": "^0.50.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "eslint": "^8",
