bug fixes at frontend - subhankar

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-LIVE_URL=http://localhost:3001
-LIVE_CLIENT=http://localhost:3000
+NEXT_PUBLIC_LIVE_URL=http://localhost:3001
+NEXT_PUBLIC_LIVE_CLIENT=http://localhost:3000
